fix: make filter elements more visible
fix gravitee-io/issues#3800

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -22,6 +22,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .form.aside .form__actions,
